--- a/sample1app/src/main/resources/templates/index.html
+++ b/sample1app/src/main/resources/templates/index.html
@@ -6,7 +6,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/6L4/2z5l5l5l5l5l5l5l5l5l5l5l5l5l5l5" crossorigin="anonymous">
   </head>
   <body class="container">
-    <h1>Welcome to the top page</h1>
-    <p>This is a sample Spring Boot application.</p>
-  </body>
+  <h1 class="display-4 mb-4" th:text="${title}"></h1>
+  <p th:text="${msg}"></p>
+  
+  <form method="post" action="/" th:object="${formModel}">
+  <ul>
+    <li th:each="error : ${#fields.detailedErrors()}"
+      class="text text-danger" th:text="${error.message}" />
+  </ul>
+  <div class="mb-3">
+    <label for="name" class="form-label">Name</label>
+    <input type="text" class="form-control" 
+        name="name" th:value="*{name}" />
+  </div>
+  <div class="mb-3">
+    <label for="name" class="form-label">Mail</label>
+    <input type="text" class="form-control" 
+        name="mail"  th:value="*{mail}" />
+  </div>
+  <div class="mb-3">
+    <label for="name" class="form-label">Age</label>
+    <input type="number" class="form-control" 
+        name="age"  th:value="*{age}" />
+  </div>
+  <div class="mb-3">
+  <label for="memo" class="form-label">Memo</label>
+  <textarea class="form-control" th:errorclass="err"
+      name="memo"  th:text="*{memo}"></textarea>
+  <div th:if="${#fields.hasErrors('memo')}" 
+      th:errors="*{memo}" th:errorclass="err">
+  </div>
+</div>
+  <input type="submit"  class="btn btn-primary"value="Create"/>
+</form>
+  
+  <table class="table">
+    <thead>
+      <tr><th>ID</th><th>Name</th><th>Mail</th><th>Age</th></tr>
+    </thead>
+    <tbody>
+      <tr th:each="item : ${data}">
+        <td th:text="${item.id}"></td>
+        <td th:text="${item.name}"></td>
+        <td th:text="${item.mail}"></td>
+        <td th:text="${item.age}"></td>
+      </tr>
+    </tbody>
+  </table>
+</body>
 </html>
